--- a/index.html
+++ b/index.html
@@ -39,5 +39,36 @@
             </div>
         </div>
     </section>
+
+    <!-- SECCION SOBRE MI -->
+    <section class="sobremi" id="sobremi">
+        <div class="contenido-seccion">
+            <h2 class="titulo-seccion">Sobre Mi</h2>
+            <h3>Detalles Personales</h3>
+
+            <p class="especial">Me dedico a realizar tatuajes de todos los estilos, pero mi especialidad es el fotorealismo.</p>
+            <p>Se cotiza en base a mostrar una imagen de referencia, tiempo dedicado a realizar el diseño y también tamaño deseado.</p>
+
+        <div class="fila">
+            <div class="col">
+                <i class="fa-solid fa-user"></i>
+                <span class="titulo-detalle">Perfil</span>
+                <p>El proceso es seguro ya que cuento con certificación de bioseguridad e higiene para prevenir posibles contagios y se realiza seguimiento en la cicatrización.</p>
+            </div>
+            <div class="col">
+                <i class="fa-solid fa-location-dot"></i>
+                <span class="titulo-detalle">Ubicación</span>
+                <p>Bernal Oeste, Quilmes, Buenos Aires, Argentina.</p>
+            </div>
+            <div class="col">
+                <i class="fa-solid fa-flag"></i>
+                <span class="titulo-detalle">Intereses</span>
+                <p>Realizar una pieza artística única en cada persona que deposita su confianza en mis manos.</p>
+            </div>
+        </div>
+
+        </div>
+
+    </section>
 </body>
 </html>
